Bug 1325775 - Update harfbuzz to version 1.4.1. r=jfkthame